<resources>
    <string name="app_name">Rick And Morty Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_text">This Rick and Morty quiz is design to test your deep knowlogue of the rick and morty epic univerts good luck!</string>
    <string name="rules_text">Select the answer from the options given true or false in this case. Each time you get an answer correct, you got 1 point \n\nIf you get the answer wrong, you lose 1 point! If you skip you also lose a point You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End game</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="title_rick_morty_question">Rick and Morty (%1$d/%2$d)</string>
    <string name="rick_and_morty_quiz">Rick And Morty Quiz</string>
    <string name="reset">Reset</string>
    <string name="score">Score</string>
    <string name="quiz_time">Quiz Time</string>
    <string name="rickandmorty">Rick and Morty</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="ruless">RULES</string>
    <string name="play">Play</string>
</resources>